vpc.tf
# Create a VPC

resource "aws_vpc" "my-vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "MyterraformVPC"
  }
}

# Create a public subnet

resource "aws_subnet" "public-subnet" {
  vpc_id     = aws_vpc.my-vpc.id
  cidr_block = "10.0.1.0/24"

}

#Create a private subnet

resource "aws_subnet" "private-subnet" {
  vpc_id     = aws_vpc.my-vpc.id
  cidr_block = "10.0.2.0/24"

}

#Creae IGN
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.my-vpc.id

}

#route tables for public subnets

resource "aws_route_table" "publicrt" {
  vpc_id = aws_vpc.my-vpc.id
  route {
    cidr_block           = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

#route table association public subnet

resource "aws_route_table_association" "publicrtassociation" {
  subnet_id      = aws_subnet.public-subnet.id
  route_table_id = aws_route_table.publicrt.id
}
